fix(Checkbox, Radio, Fieldset): :bug: Make sure spacings are only applied when needed (#746)

--- a/packages/react/src/components/form/Fieldset/Fieldset.module.css
+++ b/packages/react/src/components/form/Fieldset/Fieldset.module.css
@@ -5,7 +5,7 @@
   min-width: 0;
 }
 
-.fieldset > :not(:first-child, :empty) {
+.spacing > :not(:first-child, :empty) {
   margin-top: var(--fds-spacing-2);
 }
 
